# course_1

./: README.md  pyproject.toml
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports_spending_by_workday.py  test_services_investment_bank.py  test_utils_cards_data_to_json.py  test_utils_date.py  test_utils_get_cards_data.py  test_utils_get_currency_rates.py  test_utils_get_greeting.py  test_utils_get_stock_prices.py  test_utils_get_top_transactions.py  test_utils_get_transactions_filtered.py  test_utils_read_transactions_from_excel.py  test_utils_read_user_settings_json.py  test_utils_safe_convert.py  test_utils_timestamp_to_str.py  test_utils_top_transactions_to_json.py
