[tool.poetry]
name = "course_1"
version = "0.1.0"
description = "Course paper in module 3"
authors = ["Kirill Gladkikh <k.gladkikh@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.5"
python-dotenv = "^1.1.1"
pandas = "^2.3.3"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.9.0"
mypy = "^1.18.2"
isort = "^6.1.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# конфигурация линтеров:
[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.mypy]
disallow_untyped_defs = true
# no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.isort]
# максимальная длина строки
line_length = 119